test/Programs/ValidTests/polyTwoParams/polyTwoParams.cfs
mkPair :: forall a, b => a -> b -> (a, b)
mkPair x y = (x, y)

start :: (Int, Bool)
start = mkPair[Int, Bool] 4 True

